--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/jaywcjlove/remark-github-blockquote-alert"
   },
   "files": [
+    "alert.css",
     "src",
     "lib"
   ],
