fix: Add css file to exports map #3

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "sideEffects": false,
   "type": "module",
   "typings": "./lib/index.d.ts",
-  "exports": "./lib/index.js",
+  "exports": {
+    ".": "./lib/index.js",
+    "./alert.css": "./alert.css"
+  },
   "scripts": {
     "prepack": "npm run build",
     "start": "node lib/index.js",
