--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@types/mdast": "^4.0.4",
     "hast-util-select": "^6.0.0",
     "rehype": "^13.0.0",
     "rehype-raw": "^7.0.0",
